--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Nutritrack</string>
     <string name="title_activity_landing_page">LandingPage</string>
+    <string name="title_activity_test">test</string>
 </resources>
